force-app/main/default/objects/Incentive_Dispute__c/Incentive_Dispute__c.object-meta.xml
<CustomObject>
    <description>Tracks participant disputes against incentive calculations with full resolution workflow.</description>
    <label>Incentive Dispute</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Incentive Dispute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Disputes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>