force-app/main/default/objects/Incentive_Dispute__c/fields/Adjustment_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Calculation__c</fullName>
    <label>Adjustment Calculation</label>
    <type>Lookup</type>
    <referenceTo>Comp_Calculation__c</referenceTo>
    <relationshipLabel>Adjustment Disputes</relationshipLabel>
    <relationshipName>Adjustment_Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>