force-app/main/default/objects/Incentive_Dispute__c/fields/Comp_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Comp_Calculation__c</fullName>
    <label>Comp Calculation</label>
    <type>Lookup</type>
    <referenceTo>Comp_Calculation__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>