force-app/main/default/objects/Incentive_Dispute__c/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <label>Dispute Reason</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>