force-app/main/default/objects/Incentive_Dispute__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Incentive Disputes</relationshipLabel>
    <relationshipName>Incentive_Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>