force-app/main/default/objects/Incentive_Dispute__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resolved Disputes</relationshipLabel>
    <relationshipName>Resolved_Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>