force-app/main/default/objects/Incentive_Dispute__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>Under_Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Resolved_Upheld</fullName><default>false</default><label>Resolved Upheld</label></value>
            <value><fullName>Resolved_Corrected</fullName><default>false</default><label>Resolved Corrected</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>